--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "require": {
         "php": ">=7.0",
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/http-foundation": "^3.3"
+        "symfony/http-foundation": "~4.0"
     },
     "autoload": {
         "psr-4": {
